src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.demo-input {
  @apply px-3 py-2 block w-full rounded-md sm:text-sm;
  @apply bg-neutral-700 border shadow-sm border-slate-300 placeholder-slate-300;

  @apply invalid:border-pink-500 invalid:text-pink-600;

  @apply disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none;

  @apply focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1;
  @apply focus:invalid:border-pink-500 focus:invalid:ring-pink-500;
}

:root {
  --kd-color-brand-rgb: 249, 115, 22;
  --kd-prose-pre-bg: rgb(40, 40, 40) !important;
}

:root.dark {
  --kd-color-brand-rgb: 249, 115, 22;
}

.kit-docs .code-fence .code pre {
  margin: 0;
}

/* Workaround for https://github.com/svelteness/kit-docs/issues/17 */
.kit-docs .code-fence > div {
  background-color: transparent !important;
}

.kit-docs main input,
.kit-docs #main-sidebar .search {
  @apply rounded px-2.5 py-1 text-base placeholder-neutral-500 bg-transparent w-full;
}

.kit-docs main input:focus,
.kit-docs #main-sidebar .search:focus {
  @apply ring-orange-500 border-orange-500 ring-offset-orange-500 border-orange-500;
}

